<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/pref_group_visuals">
        <ListPreference
            app:defaultValue="@string/pref_theme_default_value"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values"
            app:icon="@drawable/ic_baseline_brightness_4_24"
            app:key="@string/pref_theme_key"
            app:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_group_me">
        <Preference
            android:icon="@drawable/ic_baseline_link_24"
            app:summary="My Github profile"
            app:title="Github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jsbuddy" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
